feat:add Engine logic

--- a/src/Lab1/Lab1.csproj
+++ b/src/Lab1/Lab1.csproj
@@ -4,4 +4,16 @@
         <RootNamespace>Itmo.ObjectOrientedProgramming.Lab1</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="Entities\JumbingEngineOmega.cs" />
+      <Compile Remove="SpaceTravel\Entities\JumbingEngineOmega.cs" />
+    </ItemGroup>
+
+
+
+    <ItemGroup>
+      <Folder Include="SpaceTravelTest\" />
+      <Folder Include="SpaceTravel\" />
+    </ItemGroup>
+
 </Project>
