feat: Deflectors added, obstacle abstracts added

--- a/src/Lab1/Lab1.csproj
+++ b/src/Lab1/Lab1.csproj
@@ -7,12 +7,13 @@
     <ItemGroup>
       <Compile Remove="Entities\JumbingEngineOmega.cs" />
       <Compile Remove="SpaceTravel\Entities\JumbingEngineOmega.cs" />
+      <Compile Remove="SpaceTravel\Entities\Deflectors\PhotonDeflector.cs" />
+      <Compile Remove="SpaceTravel\Entities\Deflectors\IPhotonDeflector.cs" />
     </ItemGroup>
 
 
 
     <ItemGroup>
-      <Folder Include="SpaceTravelTest\" />
       <Folder Include="SpaceTravel\" />
     </ItemGroup>
 
