feat: add abstracts of classes

--- a/src/Lab2/Lab2.csproj
+++ b/src/Lab2/Lab2.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <Folder Include="PersonalComputerConfigurator\Exceptions\" />
+      <Folder Include="PersonalComputerConfigurator\Models\SystemCaseCharacteristics\" />
       <Folder Include="PersonalComputerConfigurator\Services\" />
     </ItemGroup>
 
