--- a/src/Lab2/Lab2.csproj
+++ b/src/Lab2/Lab2.csproj
@@ -5,4 +5,8 @@
     </PropertyGroup>
 
 
+    <ItemGroup>
+      <Folder Include="PersonalComputerConfigurator\Services\" />
+    </ItemGroup>
+
 </Project>
