--- a/src/Lab3/Lab3.csproj
+++ b/src/Lab3/Lab3.csproj
@@ -4,11 +4,13 @@
         <RootNamespace>Itmo.ObjectOrientedProgramming.Lab3</RootNamespace>
     </PropertyGroup>
 
+
     <ItemGroup>
-      <Folder Include="CorporateMessageDistributionSystem\Entities\" />
-      <Folder Include="CorporateMessageDistributionSystem\Exceptions\" />
-      <Folder Include="CorporateMessageDistributionSystem\Models\" />
       <Folder Include="CorporateMessageDistributionSystem\Services\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Crayon" />
     </ItemGroup>
 
 </Project>
