--- a/src/Lab3/Lab3.csproj
+++ b/src/Lab3/Lab3.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Crayon" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CorporateMessageDistributionSystem\Services\" />
+    </ItemGroup>
+
 </Project>
