--- a/src/Lab4/Lab4.csproj
+++ b/src/Lab4/Lab4.csproj
@@ -4,4 +4,11 @@
         <RootNamespace>Itmo.ObjectOrientedProgramming.Lab4</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="FileSystemManager\Entities\" />
+      <Folder Include="FileSystemManager\Exceptions\" />
+      <Folder Include="FileSystemManager\Models\" />
+      <Folder Include="FileSystemManager\Services\" />
+    </ItemGroup>
+
 </Project>
