feat: file tree added

--- a/src/Lab4/Lab4.csproj
+++ b/src/Lab4/Lab4.csproj
@@ -5,10 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="FileSystemManager\Entities\" />
+      <Folder Include="FileSystemManager\Entities\FileSystem\" />
       <Folder Include="FileSystemManager\Exceptions\" />
-      <Folder Include="FileSystemManager\Models\" />
-      <Folder Include="FileSystemManager\Services\" />
     </ItemGroup>
 
 </Project>
