feat: logging user logic added

--- a/src/Lab5/ATMSystem.Application/ATMSystem.Application.csproj
+++ b/src/Lab5/ATMSystem.Application/ATMSystem.Application.csproj
@@ -7,4 +7,13 @@
         <RootNamespace>ATMSystemApplication</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="BankAccounts\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AtmSystem.Application.Abstractions\AtmSystem.Application.Abstractions.csproj" />
+      <ProjectReference Include="..\ATMSystem.Application.Contracts\ATMSystem.Application.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
