--- a/src/Lab5/AtmSystem.Infrastructure.DataAccess/AtmSystem.Infrastructure.DataAccess.csproj
+++ b/src/Lab5/AtmSystem.Infrastructure.DataAccess/AtmSystem.Infrastructure.DataAccess.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Extensions\" />
+      <Folder Include="Migrations\" />
+      <Folder Include="Plugins\" />
+      <Folder Include="Repositories\" />
+    </ItemGroup>
+
 </Project>
