--- a/src/Lab5/ATMSystem.Application.Contracts/ATMSystem.Application.Contracts.csproj
+++ b/src/Lab5/ATMSystem.Application.Contracts/ATMSystem.Application.Contracts.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+
+    <ItemGroup>
+      <ProjectReference Include="..\AtmSystem.Application.Models\AtmSystem.Application.Models.csproj" />
+    </ItemGroup>
+
+
+
 </Project>
