--- a/src/Lab5/AtmSystem.Application.Abstractions/AtmSystem.Application.Abstractions.csproj
+++ b/src/Lab5/AtmSystem.Application.Abstractions/AtmSystem.Application.Abstractions.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\AtmSystem.Application.Models\AtmSystem.Application.Models.csproj" />
+    </ItemGroup>
+
 </Project>
