feat: account operations

--- a/src/Lab5/ATMSystem.Application/ATMSystem.Application.csproj
+++ b/src/Lab5/ATMSystem.Application/ATMSystem.Application.csproj
@@ -16,4 +16,11 @@
       <ProjectReference Include="..\ATMSystem.Application.Contracts\ATMSystem.Application.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Spectre.Console" />
+    </ItemGroup>
+
 </Project>
