--- a/src/Lab5/AtmSystem.Application.Abstractions/AtmSystem.Application.Abstractions.csproj
+++ b/src/Lab5/AtmSystem.Application.Abstractions/AtmSystem.Application.Abstractions.csproj
@@ -12,4 +12,13 @@
       <ProjectReference Include="..\AtmSystem.Application.Models\AtmSystem.Application.Models.csproj" />
     </ItemGroup>
 
+
+
+    <ItemGroup>
+      <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Spectre.Console" />
+    </ItemGroup>
+
 </Project>
