--- a/src/Lab5/AtmSystem.Application.Models/AtmSystem.Application.Models.csproj
+++ b/src/Lab5/AtmSystem.Application.Models/AtmSystem.Application.Models.csproj
@@ -8,4 +8,14 @@
 
 
 
+    <ItemGroup>
+      <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Spectre.Console" />
+    </ItemGroup>
+
+
+
+
 </Project>
