--- a/src/Lab5/ATMSystem.Application.Contracts/ATMSystem.Application.Contracts.csproj
+++ b/src/Lab5/ATMSystem.Application.Contracts/ATMSystem.Application.Contracts.csproj
@@ -13,4 +13,12 @@
 
 
 
+
+    <ItemGroup>
+      <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Spectre.Console" />
+    </ItemGroup>
+
 </Project>
