--- a/src/Lab5/AtmSystem.Infrastructure.DataAccess/AtmSystem.Infrastructure.DataAccess.csproj
+++ b/src/Lab5/AtmSystem.Infrastructure.DataAccess/AtmSystem.Infrastructure.DataAccess.csproj
@@ -7,10 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Extensions\" />
-      <Folder Include="Migrations\" />
-      <Folder Include="Plugins\" />
-      <Folder Include="Repositories\" />
+      <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Spectre.Console" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AtmSystem.Application.Abstractions\AtmSystem.Application.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
