feat: user repository added, account logics changed

--- a/src/Lab5/AtmSystem.Application.Abstractions/AtmSystem.Application.Abstractions.csproj
+++ b/src/Lab5/AtmSystem.Application.Abstractions/AtmSystem.Application.Abstractions.csproj
@@ -9,6 +9,7 @@
 
 
     <ItemGroup>
+      <ProjectReference Include="..\ATMSystem.Application.Contracts\ATMSystem.Application.Contracts.csproj" />
       <ProjectReference Include="..\AtmSystem.Application.Models\AtmSystem.Application.Models.csproj" />
     </ItemGroup>
 
