--- a/src/Lab5/AtmSystem.Application.Models/AtmSystem.Application.Models.csproj
+++ b/src/Lab5/AtmSystem.Application.Models/AtmSystem.Application.Models.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Itmo.Dev.Platform.Postgres" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="NSubstitute" />
       <PackageReference Include="Spectre.Console" />
     </ItemGroup>
 
