--- a/src/Lab5/ATMSystem.Application.Contracts/ATMSystem.Application.Contracts.csproj
+++ b/src/Lab5/ATMSystem.Application.Contracts/ATMSystem.Application.Contracts.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="Itmo.Dev.Platform.Postgres" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="NSubstitute" />
       <PackageReference Include="Spectre.Console" />
     </ItemGroup>
 
