--- a/src/Lab5/AtmSystem.Infrastructure.DataAccess/AtmSystem.Infrastructure.DataAccess.csproj
+++ b/src/Lab5/AtmSystem.Infrastructure.DataAccess/AtmSystem.Infrastructure.DataAccess.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Itmo.Dev.Platform.Postgres" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="NSubstitute" />
       <PackageReference Include="Spectre.Console" />
     </ItemGroup>
 
