--- a/tests/Lab5.Tests/Lab5.Tests.csproj
+++ b/tests/Lab5.Tests/Lab5.Tests.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="NSubstitute" />
         <PackageReference Include="Spectre.Console" />
         <PackageReference Include="xunit"/>
         <PackageReference Include="xunit.runner.visualstudio">
@@ -21,6 +22,12 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Lab5\AtmSystem.Application.Abstractions\AtmSystem.Application.Abstractions.csproj" />
+      <ProjectReference Include="..\..\src\Lab5\ATMSystem.Application\ATMSystem.Application.csproj" />
+      <ProjectReference Include="..\..\src\Lab5\ATMSystem\ATMSystem.csproj" />
     </ItemGroup>
 
 </Project>
