--- a/src/Lab4/Lab4.csproj
+++ b/src/Lab4/Lab4.csproj
@@ -7,5 +7,8 @@
 
 
 
+    <ItemGroup>
+        <Folder Include="FileSystemManager\Models\FileTreeVisualizerDecorator\" />
+    </ItemGroup>
 
 </Project>
